--- a/src/app/about/[id]/styles.module.css
+++ b/src/app/about/[id]/styles.module.css
@@ -33,6 +33,8 @@
   border: none;
   color: rgb(255, 255, 255);
   transition: all 0.2s;
+  text-align: center;
+  line-height: 27px;
 }
 .button:hover {
   background: rgba(38, 90, 203, 0.431);
