--- a/src/app/about/styles.module.css
+++ b/src/app/about/styles.module.css
@@ -4,24 +4,14 @@
   background: #5e5e5e47;
   margin: 0 auto;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
 }
-.box {
-  font-size: 25px;
-  height: 100vh;
-  padding: 20px;
-  margin: 50px;
-  cursor: default;
-}
+
 .ul {
   width: 500px;
   margin-top: 30px;
   list-style: circle;
   list-style-type: circle;
-}
-.li {
-  height: 40px;
-}
-.li:hover {
-  background: #e1a5a5;
 }
