--- a/src/components/Search/styles.module.css
+++ b/src/components/Search/styles.module.css
@@ -1,3 +1,15 @@
 .form {
   margin: 20px;
+  width: 400px;
+}
+.input {
+  width: 200px;
+  height: 20px;
+  margin-right: 5px;
+  border: none;
+  padding-left: 5px;
+}
+.button {
+  width: 50px;
+  height: 20px;
 }
