добавил блокироку Seasch Input

--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -1,21 +1,14 @@
 .button {
   position: relative;
-  height: 30px;
+  height: 20px;
   width: 70px;
   border-radius: 7px;
   border: none;
-  margin: 10px;
+  margin: 5px;
   background: #ffffff;
+  transition: all 0.25s;
 }
-.button::before {
-  content: "";
-  position: absolute;
-  top: 13px;
-  left: -9px;
-  rotate: -12deg;
-  width: 0;
-  height: 0;
-  border-top: 7px solid transparent;
-  border-right: 13px solid #ffffff;
-  border-bottom: 7px solid transparent;
+
+.button:hover {
+  box-shadow: 1px 7px 15px -3px rgba(34, 60, 80, 0.2);
 }
