--- a/src/components/TeLLayout/styles.module.css
+++ b/src/components/TeLLayout/styles.module.css
@@ -1,9 +1,4 @@
-.container {
-  max-width: 1000px;
-  height: 100vh;
-  margin: 0 auto;
-}
-/* .h1 {
+.h1 {
   display: block;
   padding-top: 10px;
   text-align: center;
@@ -15,19 +10,22 @@
   height: 100vh;
   display: grid;
 
+  /* box-sizing: border-box; */
   gap: 10px;
   grid-template-columns: 1fr 1.9fr 2fr;
 }
 .navbar,
 .block {
-  background: #d849f15c;
+  background: #dbf03b3b;
   border: 1px rgba(122, 122, 122, 0.236) solid;
   border-radius: 10px;
   height: 70vh;
 }
 .block {
+  /* min-width: 400px; */
   min-width: 300px;
+  /* margin-right: 20px; */
 }
 .navbar {
   min-width: 120px;
-} */
+}
