--- a/src/components/Poster/styles.module.css
+++ b/src/components/Poster/styles.module.css
@@ -1,7 +1,31 @@
 .li {
   height: 40px;
-  list-style: decimal;
+  padding-left: 20px;
+  list-style: none;
+  border-left: 2px rgba(149, 149, 149, 0.537) solid;
+  align-content: center;
+  cursor: pointer;
+  position: relative;
 }
 .li:hover {
-  background: #e1a5a5;
+  background: #7b7a7a5a;
+  box-sizing: content-box;
+  border-left: 2px blue solid;
+  border-right: 2px blue solid;
+}
+.link {
+  display: block;
+}
+.link::first-letter {
+  text-transform: capitalize;
+}
+.link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 40px;
+  padding: 20px;
+  width: 100%;
+  /* background: #ffffff41; */
 }
