--- a/src/components/TeLLayout/styles.module.css
+++ b/src/components/TeLLayout/styles.module.css
@@ -7,7 +7,7 @@
   margin: 0 auto;
   padding: 10px;
   width: 100%;
-  height: 100vh;
+  /* min-height: 100vh; */
   display: grid;
 
   /* box-sizing: border-box; */
@@ -28,4 +28,16 @@
 }
 .navbar {
   min-width: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
+.imges {
+  margin-top: 20px;
+  width: 320px;
+  height: 200px;
+  border-radius: 15px;
+  /* min-width: 100px; */
+  object-fit: cover;
 }
